--- a/RL/src/main/webapp/registrar.html
+++ b/RL/src/main/webapp/registrar.html
@@ -9,6 +9,12 @@
 	<h1>Add New Employee</h1>
 	<form action="SaveServlet" method="post">
 		<table>
+
+			<tr>
+				<td>ID:</td>
+				<td><input type="text" name="id" /></td>
+			</tr>
+			
 			<tr>
 				<td>Name:</td>
 				<td><input type="text" name="name" /></td>
